# kabaddiPy

./: .gitignore  404.html  CONTRIBUTING.md  Code_Of_Conduct.md  Gemfile  MANIFEST.in  README.md  _config.yml  extract.py  index.html  index.md  kabaddi_data.py  main.py  mkdocs.yml  original_code.py  parsed.txt  pyproject.toml  scrape_website.py  script.js  setup.py  test.py
pypi/: MANIFEST.in  README.md  pyproject.toml  setup.cfg
pypi/archive/99_archive/2_vis/: plot_court.py  vis_plot_players.py
pypi/archive/99_archive/old-functions/: matchdata.py
pypi/kabaddiPy/: __init__.py  kabaddiPy.py
pypi/kabaddiPy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pypi/kabaddiPy/MatchData_pbp/Season_PKL_Season_10_2023/: 3_Match_3_ID_3031.json  45_Match_45_ID_3073.json  79_Match_79_ID_3107.json
pypi/kabaddiPy/MatchData_pbp/Season_PKL_Season_1_2014/: 10_Match_10_ID_10.json  31_Match_31_ID_31.json  40_Match_40_ID_40.json  44_Match_44_ID_44.json
pypi/kabaddiPy/MatchData_pbp/Season_PKL_Season_2_2015/: 11_Match_11_ID_72.json  31_Match_31_ID_92.json  35_Match_35_ID_96.json  41_Match_41_ID_102.json  45_Match_45_ID_106.json  48_Match_48_ID_109.json  4_Match_4_ID_65.json  54_Match_54_ID_115.json  56_Match_56_ID_117.json
pypi/kabaddiPy/MatchData_pbp/Season_PKL_Season_3_2016/: 27_Match_27_ID_148.json  28_Match_28_ID_149.json  59_34Place_ID_180.json  60_Final_ID_181.json
pypi/kabaddiPy/MatchData_pbp/Season_PKL_Season_6_2018/: Final_ID_762.json  (+15 more)
pypi/kabaddiPy/Matches-Overview/: S6_PKL_MatchData.json
pypi/kabaddiPy/Player-Wise-Data/: AllSeasons_AllTeams_DefenderSuccessRate.csv  AllSeasons_AllTeams_RaiderSuccessRate.csv  Player_Team_Lineup_merged.csv  merged_raider_v_num_defenders_FINAL.csv
pypi/kabaddiPy/Team-Wise-Data/: ALL_Defensive_Skills_Merged.csv  ALL_Raider_Skills_Merged.csv
pypi/kabaddiPy/asian-kabaddi/: asian-kabaddi-men.csv  asian-kabaddi-women.csv
pypi/pro_kabaddi_data.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pypi/prokabaddidata/: Exemplar_steroids.ipynb  README.md  anni_pro.py  bhaskar-test-story.ipynb  bhaskar_auction_parallel.py  bhaskar_auction_parallel_TQDM.py  bhaskar_kabaddiadda.py  cleanup.py  detailed_info.csv  exemplar.ipynb  matches_data.csv  output-auction-final.csv  output-auction.csv  pbp.csv  play-by-play.py  prokabaddidata.py  prokabaddidata_archive.py  scratch.ipynb  tableau_web_scraping.ipynb  team_roster.csv  teamdata.py  vis_final.py  vis_plot_players.py  vis_plot_players_copy.py  visualisation_functions.py  visualization.py  viz-final.py  viz-test.py
pypi/prokabaddidata/.ipynb_checkpoints/: Exemplar_steroids-checkpoint.ipynb
pypi/prokabaddidata/2_vis/: vis_plot_players.py
pypi/prokabaddidata/3_functions/: README-match.md  README-team.md  README.md  match-data.py  pbp-data.py  play-by-play.py  player-data.py  team-data.py  teamdata.py
pypi/prokabaddidata/MatchData_pbp/: README-play-by-play.md  _pbp-data.py  one player  org_pbp.py
pypi/prokabaddidata/MatchWise-pbp-overview/: build_roster.py
pypi/prokabaddidata/Matches-Overview/: _match-data.py
pypi/prokabaddidata/PKL_Standings/: _standings.py  json_s3.json  json_s7.json  pkl_standings_s6.json
pypi/prokabaddidata/Player-Wise-Data/: AllSeasons_AllTeams_DefenderSuccessRate.xlsx  AllSeasons_AllTeams_RaiderSuccessRate.csv  AllSeasons_AllTeams_RaiderSuccessRate.xlsx  Player_Team_Lineup_merged.csv  all_seasons_player_stats_rounded.csv  merged_raider_v_num_defenders_FINAL.csv
pypi/prokabaddidata/Team-Wise-Data/: ALL_Defensive_Skills_Merged.csv  ALL_Raider_Skills_Merged.csv  PKL_AggregatedTeamStats.csv  README-team.md  README_roster.md  _team-data.py  build_roster.py
pypi/prokabaddidata/bhaskar-files/: prokabaddidata.py
pypi/prokabaddidata/data-mykhel-data/: mykhel-season-9-auction-kabaddi_auction_data.csv
pypi/prokabaddidata/data_kabaddi_adda/: kabaddiadda_auctiondata_FINAL.csv  kabaddiadda_auctiondata_FINAL_Capital.csv  split_name.ipynb
pypi/prokabaddidata/detailed-data-t/: s8-team-stats.csv
pypi/prokabaddidata/functions/: matchdata.py  play-by-play.py  standingsdata.py  teamdata.py
pypi/prokabaddidata/global_sports/: file.html  file2.html  match_data.py
pypi/prokabaddidata/granular_matchwise_data__workinprogress/: inside_match_html.html  sample_match.json
pypi/prokabaddidata/kabaddiaddacheckpoints/: kabaddi_auction_data_checkpoint_1.csv  kabaddi_auction_data_checkpoint_2.csv  kabaddi_auction_data_checkpoint_4.csv  kabaddi_auction_data_checkpoint_6.csv
pypi/prokabaddidata/kabaddiaddacheckpoints_halfrun/: kabaddi_auction_data_checkpoint_3.csv
pypi/prokabaddidata/loan_info_stuff_csv/: final-one-kabaddi_auction_data copy.csv
pypi/prokabaddidata/sus/: kabaddi_adda.py  test-one-kabaddi_auction_data.csv
pypi/prokabaddidata/testing/: main.py
(+3123 files in other folders)
