[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ProKabaddi_API"
version = "0.1.0"
authors = [
  { name="Aniruddha Mukherjee", email="mukh.aniruddha@gmail.com" },
]
description = "A Python module for aggregating Kabaddi data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/annimukherjee/ProKabaddi_API"
"Bug Tracker" = "https://github.com/annimukherjee/ProKabaddi_API/issues"
