[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pro_kabaddi_data"
version = "0.1.2"
description = "A Python module for aggregating Kabaddi data"
readme = "README.md"
authors = [{name = "Bhaskar Lalwani", email = "bhaskarlalwani2040@gmail.com"}, {name = "Aniruddha Mukherjee", email = "mukh.aniruddha@example.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["kabaddi", "data", "aggregator"]
dependencies = [
    "selenium",
    "pandas",
    "beautifulsoup4",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/annimukherjee/ProKabaddi_API"
"Bug Tracker" = "https://github.com/annimukherjee/ProKabaddi_API/issues"
"Docs" = "https://annimukherjee.github.io/ProKabaddi_API/"