[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kabaddiPy"
version = "1.0.0"
description = "A Python module for aggregating Kabaddi data"
readme = "README.md"
authors = [
    {name = "Aniruddha Mukherjee", email = "mukh.aniruddha@gmail.com"},
    {name = "Bhaskar Lalwani", email = "bhaskarlalwani2040@gmail.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["kabaddi", "open-source", "aggregator", "sports-analysis"]
dependencies = [
    "pandas",
    "matplotlib",
    "seaborn",
    "jinja2",
    "importlib_resources"
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/kabaddiPy/kabaddiPy"
"Bug Tracker" = "https://github.com/kabaddiPy/kabaddiPy/issues"
"Docs" = "https://kabaddipy.github.io/kabaddiPy/"
"Source Code" = "https://github.com/kabaddiPy/kabaddiPy"


[tool.setuptools.package-data]
"*" = ["*.json", "*.csv"]

[tool.setuptools.packages.find]
where = ["."]  # List of directories to search for packages
include = ["kabaddiPy*"] 