[metadata]
name = kabaddiPy
version = 0.0.3
author = Aniruddha Mukherjee, Bhaskar Lalwani
author_email = mukh.aniruddha@gmail.com, bhaskarlalwani2040@gmail.com
description = A package to work with Pro Kabaddi League data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kabaddiPy/kabaddiPy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True

[options.package_data]
* = *.json, *.csv
